package td3.api.visitors;

public interface AbstractVisitor {
}
